--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "وقت الجهاز غير الدقيق (الفرق في الوقت: ${diff}). لضمان ميزات اللعبة مثل Buff و Time Skip وعرض مهمة AFK بشكل صحيح. يرجى مزامنة وقت جهازك مع الشبكة والتأكد من تعيين منطقة الوقت الخاصة بك بشكل صحيح",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "كيفية مزامنة وقت الجهاز؟",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "وقت الجهاز غير الدقيق (OFF بمقدار ${diff}). لضمان ميزات اللعبة مثل عرض Buff بشكل صحيح. يرجى مزامنة وقت جهازك مع الشبكة والتأكد من تعيين منطقة الوقت الخاصة بك بشكل صحيح",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
