--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Ungenauige Gerätezeit (Zeitunterschied: ${diff}). Um sicherzustellen, dass Spielfunktionen wie Buff, Time Skip und AFK -Aufgabe korrekt angezeigt werden. Bitte synchronisieren Sie Ihre Gerätezeit mit dem Netzwerk und stellen Sie sicher, dass Ihre Zeitzone korrekt eingestellt ist",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Wie synchronisieren Sie die Gerätezeit?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Ungenauige Gerätezeit (aus ${diff}). Um Spielfunktionen wie Buff Display korrekt zu gewährleisten. Bitte synchronisieren Sie Ihre Gerätezeit mit dem Netzwerk und stellen Sie sicher, dass Ihre Zeitzone korrekt eingestellt ist",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
