--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Tiempo de dispositivo inexacto (diferencia de tiempo: ${diff}). Para garantizar las características del juego como Buff, Time Skip y AFK Task se muestran correctamente. Sincrita el tiempo de su dispositivo con la red y asegúrese de que su zona de tiempo esté configurada correctamente",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "¿Cómo sincronizar el tiempo del dispositivo?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Tiempo de dispositivo inexacto (apagado por ${diff}). Para garantizar las características del juego como la pantalla Buff correctamente. Sincrita el tiempo de su dispositivo con la red y asegúrese de que su zona de tiempo esté configurada correctamente",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
