--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "부정확 한 장치 시간 (시간 차이 : ${diff}). Buff, Time Skip 및 AFK 작업 표시와 같은 게임 기능이 올바르게 표시되도록합니다. 장치 시간을 네트워크와 동기화하고 시간대가 올바르게 설정되어 있는지 확인하십시오",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5869,17 +5880,6 @@
  	 	"cancel": {
  	 	 	"trans": "장치 시간을 동기화하는 방법?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "부정확 한 장치 시간 (${diff}에 의해 OFF). 버프 디스플레이와 같은 게임 기능이 올바르게 보장됩니다. 장치 시간을 네트워크와 동기화하고 시간대가 올바르게 설정되어 있는지 확인하십시오",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
