--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Niedokładny czas urządzenia (różnica czasu: ${diff}). Aby zapewnić, że funkcje gry, takie jak Buff, Skip i AFK Dispeld. Zsynchronizuj czas urządzenia z siecią i upewnij się, że strefa czasu jest ustawiona poprawnie",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Jak zsynchronizować czas urządzenia?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Niedokładny czas urządzenia (wyłączony przez ${diff}). Aby upewnić się, że funkcje gry, takie jak Buff, wyświetlają prawidłowo. Zsynchronizuj czas urządzenia z siecią i upewnij się, że strefa czasu jest ustawiona poprawnie",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
