--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "INACCURATE TIMP DE DESPRE (DIFERENȚA TIMPULUI: ${diff}). Pentru a asigura funcții de joc, cum ar fi Buff, Time Skip și AFK Task Afișare corect. Vă rugăm să sincronizați timpul dispozitivului cu rețeaua și să vă asigurați că zona de timp este setată corect",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Cum se sincronizează timpul dispozitivului?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Timpul dispozitivului inexact (oprit cu ${diff}). Pentru a asigura funcțiile jocului, cum ar fi afișarea buff. Vă rugăm să sincronizați timpul dispozitivului cu rețeaua și să vă asigurați că zona de timp este setată corect",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
