--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Неточное время устройства (разница во времени: ${diff}). Чтобы убедиться, что играет такие функции, как Buff, Time Skip и AFK -задачи правильно отображаются. Пожалуйста, синхронизируйте время вашего устройства с сетью и убедитесь, что ваша зона времени установлена правильно",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Как синхронизировать время устройства?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Неточное время устройства (от ${diff}). Чтобы гарантировать, что игры, такие как бафф -дисплей, правильно. Пожалуйста, синхронизируйте время вашего устройства с сетью и убедитесь, что ваша зона времени установлена правильно",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
