--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Yanlış cihaz süresi (zaman farkı: ${diff}). Buff, Time Skip ve AFK görevi gibi oyun özelliklerini doğru bir şekilde göstermesini sağlamak. Lütfen cihaz zamanınızı ağ ile senkronize edin ve zaman diliminizin doğru ayarlandığından emin olun",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Cihaz süresini nasıl senkronize eder?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Yanlış cihaz süresi (${diff} ile kapalı). Buff ekran gibi oyun özelliklerini doğru bir şekilde sağlamak için. Lütfen cihaz zamanınızı ağ ile senkronize edin ve zaman diliminizin doğru ayarlandığından emin olun",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
