--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Неточний час пристрою (різниця у часі: ${diff}). Щоб забезпечити правильне відображення ігор, таких як Buff, Time Skip та AFK. Будь ласка, синхронізуйте час пристрою з мережею та переконайтеся, що ваша часова зона встановлена правильно",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5961,17 +5972,6 @@
  	 	"cancel": {
  	 	 	"trans": "Як синхронізувати час пристрою?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Неточний час пристрою (вимкнено ${diff}). Щоб правильно забезпечити функції гри, такі як Buff Display. Будь ласка, синхронізуйте час пристрою з мережею та переконайтеся, що ваша часова зона встановлена правильно",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
