--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "不准確的設備時間（時間差：${diff}）。 為了確保諸如buff之類的遊戲功能，時間跳過和AFK任務正確顯示。 請將設備時間與網絡同步，並確保正確設置您的時區",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5964,17 +5975,6 @@
  	 	"cancel": {
  	 	 	"trans": "如何同步設備時間？",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "您的裝置時間不準確（時差: ${diff}）。 確保遊戲功能例如buff顯示正確。 請將設備時間與網絡同步，並確保正確設置您的時區",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
