--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Temps de périphérique inexact (différence de temps: ${diff}). Pour garantir correctement les fonctionnalités de jeu telles que Buff, Skip et AFK. Veuillez synchroniser le temps de votre appareil avec le réseau et assurez-vous que votre relais est réglé correctement",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Comment synchroniser le temps de l'appareil?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Temps de périphérique inexact (désactivé par ${diff}). Pour garantir correctement les fonctionnalités du jeu telles que l'affichage buff. Veuillez synchroniser le temps de votre appareil avec le réseau et assurez-vous que votre relais est réglé correctement",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
