--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Waktu perangkat yang tidak akurat (perbedaan waktu: ${diff}). Untuk memastikan fitur game seperti Buff, Time Skip dan AFK Task ditampilkan dengan benar. Harap sinkronkan waktu perangkat Anda dengan jaringan dan pastikan zona waktu Anda diatur dengan benar",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Bagaimana cara menyinkronkan waktu perangkat?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Waktu perangkat yang tidak akurat (mati dengan ${diff}). Untuk memastikan fitur game seperti tampilan buff dengan benar. Harap sinkronkan waktu perangkat Anda dengan jaringan dan pastikan zona waktu Anda diatur dengan benar",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
