--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Dispositivo inaccurato (differenza di tempo: ${diff}). Per garantire che funzionalità di gioco come Buff, Time Skip e AFK Attività vengono visualizzate correttamente. Si prega di sincronizzare il tempo del dispositivo con la rete e assicurarsi che la zona temporale sia impostata correttamente",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5973,17 +5984,6 @@
  	 	"cancel": {
  	 	 	"trans": "Come sincronizzare il tempo del dispositivo?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Tempo di dispositivo impreciso (OFF di ${diff}). Per garantire correttamente funzionalità di gioco come il display Buff. Si prega di sincronizzare il tempo del dispositivo con la rete e assicurarsi che la zona temporale sia impostata correttamente",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
