--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Onnauwkeurige apparaattijd (tijdverschil: ${diff}). Om ervoor te zorgen dat gamefuncties zoals buff, time skip en AFK -taak correct worden weergegeven. Synchroniseer uw apparaattijd met netwerk en zorg ervoor dat uw tijdzone correct is ingesteld",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Hoe de tijd van het apparaat synchroniseren?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Onnauwkeurige apparaattijd (uit ${diff}). Om ervoor te zorgen dat gamefuncties zoals Buff correct worden weergegeven. Synchroniseer uw apparaattijd met netwerk en zorg ervoor dat uw tijdzone correct is ingesteld",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
