--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Tempo impreciso do dispositivo (diferença de tempo: ${diff}). Para garantir recursos do jogo, como Buff, Time Skip e AFK Task Exibir corretamente. Por favor, sincronize o tempo do seu dispositivo com a rede e verifique se o seu tempo está definido corretamente",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5973,17 +5984,6 @@
  	 	"cancel": {
  	 	 	"trans": "Como sincronizar o tempo do dispositivo?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Tempo impreciso do dispositivo (desligado por ${diff}). Para garantir recursos do jogo, como a exibição de buff corretamente. Por favor, sincronize o tempo do seu dispositivo com a rede e verifique se o seu tempo está definido corretamente",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
