--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Nepresný čas zariadenia (časový rozdiel: ${diff}). Zabezpečiť správne zobrazenie funkcií hry, ako sú Buff, Time preskočenie a AFK. Synchronizujte čas svojho zariadenia so sieťou a uistite sa, že je váš časový zón nastavený správne",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5973,17 +5984,6 @@
  	 	"cancel": {
  	 	 	"trans": "Ako synchronizovať čas zariadenia?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Nepresný čas zariadenia (vypnutý ${diff}). Zabezpečiť správne funkcie hry, ako je napríklad Buff Display. Synchronizujte čas svojho zariadenia so sieťou a uistite sa, že je váš časový zón nastavený správne",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
