--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "เวลาอุปกรณ์ที่ไม่ถูกต้อง (ความแตกต่างของเวลา: ${diff}) เพื่อให้แน่ใจว่าคุณสมบัติของเกมเช่น Buff, Time Skip และ AFK Display อย่างถูกต้อง โปรดซิงค์เวลาอุปกรณ์ของคุณกับเครือข่ายและตรวจสอบให้แน่ใจว่าโซนเวลาของคุณถูกตั้งค่าอย่างถูกต้อง",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "วิธีการซิงค์เวลาอุปกรณ์?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "เวลาอุปกรณ์ที่ไม่ถูกต้อง (ปิดโดย ${diff}) เพื่อให้แน่ใจว่าคุณสมบัติของเกมเช่น Buff Display อย่างถูกต้อง โปรดซิงค์เวลาอุปกรณ์ของคุณกับเครือข่ายและตรวจสอบให้แน่ใจว่าโซนเวลาของคุณถูกตั้งค่าอย่างถูกต้อง",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
