--- a/contribution/lang/tl.json
+++ b/contribution/lang/tl.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Hindi tumpak na oras ng aparato (pagkakaiba sa oras: ${diff}). Upang matiyak ang mga tampok ng laro tulad ng buff, oras ng laktawan at pagpapakita ng gawain ng AFK. Mangyaring i-sync ang oras ng iyong aparato sa network at tiyakin na ang iyong oras-zone ay nakatakda nang tama",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5973,17 +5984,6 @@
  	 	"cancel": {
  	 	 	"trans": "Paano i -sync ang oras ng aparato?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Hindi tumpak na oras ng aparato (off ng ${diff}). Upang matiyak ang mga tampok ng laro tulad ng buff display nang tama. Mangyaring i-sync ang oras ng iyong aparato sa network at tiyakin na ang iyong oras-zone ay nakatakda nang tama",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
