--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -2821,6 +2821,17 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrect": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Thời gian thiết bị không chính xác (chênh lệch thời gian: ${diff}). Để đảm bảo các tính năng của trò chơi như Buff, Time Skip và AFK Task Hiển thị chính xác. Vui lòng đồng bộ thời gian thiết bị của bạn với mạng và đảm bảo vùng thời gian của bạn được đặt chính xác",
+ 	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"craft": {
  	 	"maxAmountText": {
  	 	 	"vars": [
@@ -5760,17 +5771,6 @@
  	 	"cancel": {
  	 	 	"trans": "Làm thế nào để đồng bộ hóa thời gian của thiết bị?",
  	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Thời gian thiết bị không chính xác (Tắt bởi ${diff}). Để đảm bảo các tính năng trò chơi như hiển thị Buff một cách chính xác. Vui lòng đồng bộ thời gian thiết bị của bạn với mạng và đảm bảo vùng thời gian của bạn được đặt chính xác",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
- 	 	 	}
  	 	}
  	},
  	"dungeon": {
