--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2288,7 +2288,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName} 활성화되었습니다",
+ 	 	 	 	 	"trans": "${itemName}가 활성화되었습니다",
  	 	 	 	 	"eng": "${itemName} Activated"
  	 	 	 	},
  	 	 	 	"description": {
@@ -2827,7 +2827,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"diff"
  	 	 	 	],
- 	 	 	 	"trans": "부정확 한 장치 시간 (시간 차이 : ${diff}). Buff, Time Skip 및 AFK 작업 표시와 같은 게임 기능이 올바르게 표시되도록합니다. 장치 시간을 네트워크와 동기화하고 시간대가 올바르게 설정되어 있는지 확인하십시오",
+ 	 	 	 	"trans": "장치 시간이 서버 시간과 같지 않습니다. (시간 차이: ${diff}). 버프, 글로벌 스킵과 오프라인 작업 표시와 같은 게임 기능이 올바르게 표시되도록 장치 시간을 네트워크와 동기화하고 시간대가 올바르게 설정되어 있는지 확인하십시오",
  	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
@@ -3082,15 +3082,15 @@
  	},
  	"sessionClosedScreen": {
  	 	"title": {
- 	 	 	"trans": "다른 장치에 로그인했습니다",
+ 	 	 	"trans": "다른 장치에서 로그인하셨습니다",
  	 	 	"eng": "You have logged in on another device"
  	 	},
  	 	"description": {
- 	 	 	"trans": "이 장치에서 계속 재생하려면 다시 연결을 클릭하십시오.",
+ 	 	 	"trans": "이 장치로 계속 게임을 플레이하려면 재연결을 눌러주세요.",
  	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
  	 	},
  	 	"restartApp": {
- 	 	 	"trans": "지금 다시 연결하십시오",
+ 	 	 	"trans": "재연결",
  	 	 	"eng": "Reconnect Now"
  	 	}
  	},
@@ -4448,7 +4448,7 @@
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
  	 	 	"descriptionv2": {
- 	 	 	 	"trans": "갱단이 기능을 유지하기위한 기타 항목과 리소스가 포함되어 있습니다. \r\n         갱 본부에서 사용할 수 있습니다",
+ 	 	 	 	"trans": "갱단이 기능을 유지하기위한 잡다한 아이템과 자원들이 포함되어 있습니다. \r\n         갱단 본부에서 '갱 자원 수집'을 통해 자원을 보낼 수 있습니다. (갱단에 가입되어 있어야 합니다)",
  	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
@@ -5870,7 +5870,7 @@
  	},
  	"incorrectTimeModal": {
  	 	"title": {
- 	 	 	"trans": "부정확 한 장치 시간",
+ 	 	 	"trans": "장치 시간 동기화 오류",
  	 	 	"eng": "Inaccurate Device Time"
  	 	},
  	 	"confirm": {
@@ -5878,7 +5878,7 @@
  	 	 	"eng": "Ok"
  	 	},
  	 	"cancel": {
- 	 	 	"trans": "장치 시간을 동기화하는 방법?",
+ 	 	 	"trans": "어떻게 장치 시간을 동기화할 수 있나요?",
  	 	 	"eng": "How to sync device time?"
  	 	}
  	},
@@ -6172,7 +6172,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "${itemName}에 대한 가격",
+ 	 	 	 	"trans": "${itemName}의 가격",
  	 	 	 	"eng": "Price for ${itemName}"
  	 	 	}
  	 	},
@@ -6783,7 +6783,7 @@
  	 	 	"vars": [
  	 	 	 	"amount"
  	 	 	],
- 	 	 	"trans": "선택된 금액 : ${amount}",
+ 	 	 	"trans": "선택한 수량 : ${amount}",
  	 	 	"eng": "Selected amount: ${amount}"
  	 	}
  	},
@@ -6903,22 +6903,22 @@
  	},
  	"forgotPasswordPage": {
  	 	"title": {
- 	 	 	"trans": "이메일을 입력하면 시스템이 리셋 비밀번호 이메일을 귀하에게 보냅니다",
+ 	 	 	"trans": "이메일을 입력하시면 시스템이 임시 비밀번호 이메일을 보냅니다.",
  	 	 	"eng": "Enter your email, the system will send a reset password email to you"
  	 	},
  	 	"emailRequired": {
- 	 	 	"trans": "이메일이 필요합니다",
+ 	 	 	"trans": "이메일을 입력해주십시오",
  	 	 	"eng": "Email is required"
  	 	},
  	 	"sendEmail": {
- 	 	 	"trans": "이메일을 보내",
+ 	 	 	"trans": "이메일 전송",
  	 	 	"eng": "Send Email"
  	 	},
  	 	"emailSent": {
  	 	 	"vars": [
  	 	 	 	"email"
  	 	 	],
- 	 	 	"trans": "비밀번호 재설정 이메일이 {email}으로 전송되었습니다",
+ 	 	 	"trans": "임시 비밀번호가 {email}으로 전송되었습니다",
  	 	 	"eng": "An password reset email has been sent to {email}"
  	 	},
  	 	"checkEmail": {
